# smart-scribe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  biome.json  index.ts  package.json
.github/workflows/: ci.yml  release.yml
.spec/: project.md
.spec/specs/rust-rewrite/: design.md  plan.md  spec.md  tasks.md
docs/: GEMINI_RUST_INTEGRATION.md  MIGRATION_PLAN.md  REQUIREMENTS.md  RUST_ARCHITECTURE.md
scripts/: compare-versions.sh  install.ps1  install.sh  signal-cancel.sh  signal-toggle.sh
src/: index.ts  lib.rs  main.rs
src/application/: daemon.rs  mod.rs  output_dispatcher.rs  transcribe.rs
src/application/ports/: audio-recorder.port.ts  audio_cue.rs  clipboard.port.ts  clipboard.rs  config.port.ts  config.rs  keystroke.port.ts  keystroke.rs  mod.rs  notification.port.ts  notifier.rs  recorder.rs  smart_paste.rs  transcriber.rs  transcription.port.ts  unbounded-recorder.port.ts
src/application/use-cases/: daemon-transcription.ts  transcribe-recording.ts
src/cli/: app.rs  app.ts  args.rs  auth_cmd.rs  config-command.ts  config-parser.ts  config_cmd.rs  config_schema.rs  daemon-app.ts  daemon-signals.ts  daemon_app.rs  daemon_cmd.rs  exit_codes.rs  mod.rs  output.rs  parser.ts  pid-file.ts  pid_file.rs  presenter.rs  presenter.ts  runtime.rs  signals.rs  signals.ts  socket.rs
src/cli/ipc/: mod.rs  named_pipe.rs  unix_socket.rs
src/domain/: error.rs  mod.rs
src/domain/config/: app_config.rs  index.ts  mod.rs  platform.rs  raw.rs
src/domain/config/errors/: config.errors.ts
src/domain/config/value-objects/: app-config.vo.ts  config-path.vo.ts
src/domain/daemon/: mod.rs  session.rs
src/domain/daemon/entities/: daemon-session.entity.ts
src/domain/recording/: duration.rs  mod.rs
src/domain/shared/: result.ts
src/domain/transcription/: audio_data.rs  domain_preset.rs  mod.rs  system_prompt.rs
src/gui/: layer_shell.rs  mod.rs  tray.rs
src/infrastructure/: mod.rs
src/infrastructure/audio_cue/: mod.rs  noop.rs  rodio.rs
src/infrastructure/auth/: codex_import.rs  error.rs  mod.rs  oauth_client.rs  oauth_store.rs  oauth_token.rs
src/infrastructure/clipboard/: arboard.rs  clipboard.adapter.ts  mod.rs  wayland.rs
src/infrastructure/config/: config.service.ts  environment.ts  mod.rs  xdg-config.adapter.ts  xdg.rs
src/infrastructure/keystroke/: enigo.rs  factory.rs  mod.rs  noop.rs  wtype.adapter.ts  wtype.rs  xdotool.adapter.ts  xdotool.rs  ydotool.rs
src/infrastructure/notification/: mod.rs  notify-send.adapter.ts  notify_rust.rs  notify_send.rs
src/infrastructure/recording/: cpal_recorder.rs  ffmpeg-recorder.adapter.ts  ffmpeg.rs  flac_encoder.rs  mod.rs  opus_encoder.rs
src/infrastructure/smart_paste/: kdotool.rs  mod.rs  noop.rs
src/infrastructure/transcription/: chatgpt.rs  chatgpt_oauth.rs  gemini-transcription.adapter.ts  gemini.rs  mod.rs  openai_api.rs
src/infrastructure/util/: mod.rs  tool_detect.rs
tests/: cli_tests.rs  error_tests.rs  json_output_tests.rs  live_oauth_test.rs  transcription_tests.rs
(+7 files in other folders)
