[package]
name = "smart-scribe"
version = "2.1.0"
edition = "2021"
description = "AI-powered audio transcription CLI using Google Gemini"
authors = ["SmartScribe Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/smart-scribe"
keywords = ["transcription", "audio", "ai", "gemini", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Terminal UI
colored = "2"
indicatif = "0.17"

# Async traits
async-trait = "0.1"

# Base64 encoding for audio
base64 = "0.22"

# Directory paths
dirs = "5"

# Cross-platform audio capture (replaces FFmpeg)
cpal = "0.15"
opus = "0.3"
ogg = "0.9"

# Cross-platform adapters
arboard = "3"
enigo = "0.2"
notify-rust = "4"

# Resampling for audio
rubato = "0.16"

# Unix-only dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "poll"] }

# Linux-only dependencies (Wayland layer-shell indicator)
[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
tiny-skia = "0.11"
fontdue = "0.9"

# Windows-only dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading"
] }

[dev-dependencies]
# Testing
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
